samples/_failures_safe/1761200536_cefc78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_443fd0a0.c: In function ‘main’:
./samples/SAFE/__tmp_443fd0a0.c:163:10: error: ‘tokenize’ undeclared (first use in this function); did you mean ‘tokens’?
  163 |     if (!tokenize
      |          ^~~~~~~~
      |          tokens
./samples/SAFE/__tmp_443fd0a0.c:163:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_443fd0a0.c:163:18: error: expected ‘)’ at end of input
  163 |     if (!tokenize
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_443fd0a0.c:163:5: error: expected declaration or statement at end of input
  163 |     if (!tokenize
      |     ^~
